fixed explore roles page witth overflow

--- a/client/src/components/ExploreRoles/ExploreRoles.module.css
+++ b/client/src/components/ExploreRoles/ExploreRoles.module.css
@@ -1,9 +1,28 @@
 .header {
-  
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem auto;
+}
+
+.headerButton {
+  grid-row: 1;
+  grid-column: 1;
 }
 
 .progres {
   composes: progres from "../../styles/ProcesBar.module.css";
+  grid-row: 1;
+  grid-column: 2;
+  margin: 2rem auto;
+}
+
+.headerTitle {
+  grid-row: 2;
+  grid-column: 2;
+  margin: 0 auto;
 }
 
 .progresTitle {
@@ -27,7 +46,7 @@
   font-weight: bold;
   align-self: end;
   justify-self: center;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .pagewrapper {
@@ -41,10 +60,11 @@
  justify-content: flex-end;
  align-items: flex-start;
  margin-right: 10rem;
- margin-bottom: 5rem;
+ margin-bottom: 3rem;
+ margin-top: 3rem;
 }
 
 .roles {
-  height: 50%;
-  overscroll-y: scroll;
+  height: 100%;
+  overflow-y: scroll;
 }
